// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentWrapper Renders the UI snapshot correctly 1`] = `
<div
  className="css-1xdhyk6"
  id="id-wrapper"
>
  <h2
    className="chakra-heading css-1xdhyk6"
    id="id-heading"
  >
    heading text
  </h2>
  <p
    className="chakra-text css-1xdhyk6"
  >
    description text
  </p>
  <div>
    children elements
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="id-helperText"
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "helper text",
        }
      }
    />
  </div>
</div>
`;

exports[`ComponentWrapper Renders the UI snapshot correctly 2`] = `
<div
  className="css-1xdhyk6"
  id="id-wrapper"
>
  <div>
    children elements
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="id-helperText"
  />
</div>
`;

exports[`ComponentWrapper Renders the UI snapshot correctly 3`] = `
<div
  className="css-1xdhyk6"
  id="id-wrapper"
>
  <h2
    className="chakra-heading css-1xdhyk6"
    id="id-heading"
  >
    heading text
  </h2>
  <p
    className="chakra-text css-1xdhyk6"
  >
    description text
  </p>
  <div>
    children elements
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={true}
    id="id-helperText"
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "invalid text",
        }
      }
    />
  </div>
</div>
`;

exports[`ComponentWrapper Renders the UI snapshot correctly 4`] = `
<div
  className="css-kle7zy"
  id="chakra-wrapper"
>
  <div>
    children elements
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="chakra-helperText"
  />
</div>
`;

exports[`ComponentWrapper Renders the UI snapshot correctly 5`] = `
<div
  className="css-1xdhyk6"
  data-testid="props"
  id="props-wrapper"
>
  <div>
    children elements
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="props-helperText"
  />
</div>
`;
